solution and correction of the test

--- a/00-Python Object and Data Structure Basics/10-Objects and Data Structures Assessment Test-Solution.ipynb
+++ b/00-Python Object and Data Structure Basics/10-Objects and Data Structures Assessment Test-Solution.ipynb
@@ -9,6 +9,7 @@
     "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
     "___\n",
     "<center><em>Content Copyright by Pierian Data</em></center>\n",
+    "\n",
     "# Objects and Data Structures Assessment Test"
    ]
   },
@@ -29,24 +30,24 @@
     "collapsed": true
    },
    "source": [
-    "Write (or just say out loud to yourself) a brief description of all the following Object Types and Data Structures we've learned about. You can edit the cell below by double clicking on it. Really this is just to test if you know the difference between these, so feel free to just think about it, since your answers are self-graded."
+    "Write a brief description of all the following Object Types and Data Structures we've learned about: "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Double Click HERE to edit this markdown cell and write answers.\n",
+    "**For the full answers, review the Jupyter notebook introductions of each topic!**\n",
     "\n",
-    "Numbers: Divided into integers (complete numbers) and floats (numbers with decimals)\n",
+    "[Numbers](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Numbers.ipynb)\n",
     "\n",
-    "Strings: Words, text\n",
+    "[Strings](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Strings.ipynb)\n",
     "\n",
-    "Lists: List of floats, integers, strings... that are organized on order. Utilizes the [] notation, and can add, append...\n",
+    "[Lists](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Lists.ipynb)\n",
     "\n",
-    "Tuples: \"Lists\", but the order of the items can't be changed, utilizes the () notation.\n",
+    "[Tuples](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Tuples.ipynb)\n",
     "\n",
-    "Dictionaries: {}, attribute a key to a variable.\n"
+    "[Dictionaries](http://nbviewer.ipython.org/github/jmportilla/Complete-Python-Bootcamp/blob/master/Dictionaries.ipynb)\n"
    ]
   },
   {
@@ -63,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -79,7 +78,8 @@
     }
    ],
    "source": [
-    "5 ** 2 / 100 + 25 * 8 - 100"
+    "# Your answer is probably different\n",
+    "(60 + (10 ** 2) / 4 * 7) - 134.75"
    ]
   },
   {
@@ -88,43 +88,85 @@
    "source": [
     "Answer these 3 questions without typing code. Then type code to check your answer.\n",
     "\n",
-    "    What is the value of the expression 4 * (6 + 5) = 44\n",
+    "    What is the value of the expression 4 * (6 + 5)\n",
     "    \n",
-    "    What is the value of the expression 4 * 6 + 5 = 29\n",
+    "    What is the value of the expression 4 * 6 + 5 \n",
     "    \n",
-    "    What is the value of the expression 4 + 6 * 5 = 34"
+    "    What is the value of the expression 4 + 6 * 5 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44\n",
-      "29\n",
-      "34\n"
-     ]
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(4 * (6 + 5))\n",
-    "print(4 * 6 + 5)\n",
-    "print(4 + 6 * 5)"
+    "4 * (6 + 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 * 6 + 5 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 + 6 * 5 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>\n",
-    "Ans.: float\n",
-    "Correct: floating point number"
+    "What is the *type* of the result of the expression 3 + 1.5 + 4?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer: Floating Point Number**"
    ]
   },
   {
@@ -136,50 +178,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.0"
+       "10.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Square root:\n",
-    "# number ** 1/2\n",
-    "25 ** (1/2)"
+    "100 ** 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Square:\n",
-    "# number ** 2\n",
-    "5 ** 2"
+    "10 ** 2"
    ]
   },
   {
@@ -198,10 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -209,7 +243,7 @@
        "'e'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,10 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -241,7 +273,7 @@
        "'olleh'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,15 +289,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the string hello, give two methods of producing the letter 'o' using indexing."
+    "Given the string 'hello', give two methods of producing the letter 'o' using indexing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -273,7 +303,7 @@
        "'o'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,15 +314,13 @@
     "\n",
     "# Method 1:\n",
     "\n",
-    "s[4]"
+    "s[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -300,7 +328,7 @@
        "'o'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +336,7 @@
    "source": [
     "# Method 2:\n",
     "\n",
-    "s[-1]"
+    "s[4]"
    ]
   },
   {
@@ -327,46 +355,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Method 1:\n",
-    "l = [0,0]\n",
-    "l.append(0)\n",
-    "print(l)"
+    "[0]*3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Method 2:\n",
-    "l = [0,0,0,1]\n",
-    "l.pop()\n",
-    "print(l)"
+    "list2 = [0,0,0]\n",
+    "list2"
    ]
   },
   {
@@ -378,25 +405,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "list3 = [1,2,[3,4,'hello']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "list3[2][2] = 'goodbye'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, [3, 4, 'goodbye']]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, [3, 4, 'goodbye']]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "list3 = [1,2,[3,4,'hello']]\n",
-    "\n",
-    "list3[2][2] = 'goodbye'\n",
-    "\n",
-    "print(list3)"
+    "list3"
    ]
   },
   {
@@ -408,25 +454,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "list4 = [5,3,4,6,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 4, 5, 6]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "list4 = [5,3,4,6,1]\n",
-    "\n",
+    "# Method 1:\n",
+    "sorted(list4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Method 2:\n",
     "list4.sort()\n",
-    "\n",
-    "print(list4)"
+    "list4"
    ]
   },
   {
@@ -445,10 +522,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -456,7 +531,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,15 +539,14 @@
    "source": [
     "d = {'simple_key':'hello'}\n",
     "# Grab 'hello'\n",
+    "\n",
     "d['simple_key']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -480,7 +554,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,15 +562,26 @@
    "source": [
     "d = {'k1':{'k2':'hello'}}\n",
     "# Grab 'hello'\n",
+    "\n",
     "d['k1']['k2']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# Getting a little tricker\n",
+    "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -504,25 +589,32 @@
        "'hello'"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Getting a little tricker\n",
-    "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
-    "\n",
-    "#Grab hello\n",
+    "# This was harder than I expected...\n",
     "d['k1'][0]['nest_key'][1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# This will be hard and annoying!\n",
+    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -530,15 +622,13 @@
        "'hello'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This will be hard and annoying!\n",
-    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
-    "\n",
+    "# Phew!\n",
     "d['k1'][2]['k2'][1]['tough'][2][0]"
    ]
   },
@@ -546,9 +636,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you sort a dictionary? Why or why not?<br><br>\n",
-    "Ans.: No, bc it works as a combination of keys and values.\n",
-    "Correct: No! Because normal dictionaries are *mappings* not a sequence."
+    "Can you sort a dictionary? Why or why not?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer: No! Because normal dictionaries are *mappings* not a sequence. **"
    ]
   },
   {
@@ -562,16 +657,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the major difference between tuples and lists?<br><br>\n",
-    "Ans.: Tuples can't change order."
+    "What is the major difference between tuples and lists?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How do you create a tuple?<br><br>\n",
-    "Ans.: Like a list, but using () instead."
+    "**Tuples are immutable!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do you create a tuple?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t = (1,2,3)"
    ]
   },
   {
@@ -585,8 +696,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is unique about a set?<br><br>\n",
-    "Ans.: It only reads unique values, meaning that a value are not read more than once."
+    "What is unique about a set?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer: They don't allow for duplicate items!**"
    ]
   },
   {
@@ -598,10 +715,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "list5 = [1,2,2,33,4,4,11,22,3,3,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -609,15 +735,13 @@
        "{1, 2, 3, 4, 11, 22, 33}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list5 = [1,2,2,33,4,4,11,22,3,3,2]\n",
-    "\n",
-    "set(list5)\n"
+    "set(list5)"
    ]
   },
   {
@@ -679,10 +803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -690,22 +812,20 @@
        "False"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer before running cell = False\n",
+    "# Answer before running cell\n",
     "2 > 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -713,22 +833,20 @@
        "False"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer before running cell = False\n",
+    "# Answer before running cell\n",
     "3 <= 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -736,22 +854,20 @@
        "False"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer before running cell = False\n",
+    "# Answer before running cell\n",
     "3 == 2.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -759,22 +875,20 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer before running cell = True\n",
+    "# Answer before running cell\n",
     "3.0 == 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -782,13 +896,13 @@
        "False"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer before running cell = False\n",
+    "# Answer before running cell\n",
     "4**0.5 != 2"
    ]
   },
@@ -801,10 +915,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -812,7 +924,7 @@
        "False"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,11 +948,8 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
-  "interpreter": {
-   "hash": "98590ff4fe04c8543246b2a01debd3de3c5ca9b666f43f1fa87d5110c692004c"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -854,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
