--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,15 +38,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers: Divided into integers (complete numbers) and floats (numbers with decimals)\n",
+    "Numbers: Integers and simple float number types.\n",
     "\n",
-    "Strings: Words, text\n",
+    "Strings: Words, text, utilized between single quotes, double quotes or triple double quotes for phrases.\n",
     "\n",
-    "Lists: List of floats, integers, strings... that are organized on order. Utilizes the [] notation, and can add, append...\n",
+    "Lists: Sequence. Mutable. Constructed with brackets [] and commas separating every element on the list.\n",
     "\n",
-    "Tuples: \"Lists\", but the order of the items can't be changed, utilizes the () notation.\n",
+    "Tuples: \"Lists\", but the order of the items can't be changed, utilizes the () notation. Used normally in days of the week, dates or calendar.\n",
     "\n",
-    "Dictionaries: {}, attribute a key to a variable.\n"
+    "Dictionaries: {}, mappings, collection of objects that are stored by a key, unlike a sequence that stored objects by their relative position. Mappings won't retain order since they have objects defined by a key. A dictionary consists of a key and then an associated value.\n"
    ]
   },
   {
