--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -46,12 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import randint\n",
+    "number = randint(1,100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,12 +65,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a guessing number game!\n",
+      "I'm thinking of a number between 1 and 100!\n",
+      "If your guess is more than 10 away from my number, I'll tell you you're COLD\n",
+      "If your guess is within 10 of my number, I'll tell you you're WARM\n",
+      "If your guess is farther than your most recent guess, I'll say you're getting COLDER\n",
+      "If your guess is closer than your most recent guess, I'll say you're getting WARMER\n",
+      "LET'S PLAY!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is a guessing number game!\")\n",
+    "print(\"I'm thinking of a number between 1 and 100!\")\n",
+    "print(\"If your guess is more than 10 away from my number, I'll tell you you're COLD\")\n",
+    "print(\"If your guess is within 10 of my number, I'll tell you you're WARM\")\n",
+    "print(\"If your guess is farther than your most recent guess, I'll say you're getting COLDER\")\n",
+    "print(\"If your guess is closer than your most recent guess, I'll say you're getting WARMER\")\n",
+    "print(\"LET'S PLAY!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,12 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "guesses = [0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,15 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OUT OF BOUNDS! Please try again: \n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    \n",
-    "    pass"
+    "    guess = int(input(\"I'm thinking of a number between 1 and 100!\\n What's your guess?: \"))\n",
+    "    \n",
+    "    if guess < 1 or guess > 100:\n",
+    "        print(\"OUT OF BOUNDS! Please try again: \")\n",
+    "        continue\n",
+    "    \n",
+    "    break"
    ]
   },
   {
@@ -130,8 +171,16 @@
     "while True:\n",
     "\n",
     "    # we can copy the code from above to take an input\n",
-    "\n",
-    "    pass"
+    "    guess = int(input(\"I'm thinking of a number between 1 and 100!\\n What's your guess?: \"))\n",
+    "    \n",
+    "    if guess < 1 or guess > 100:\n",
+    "        print(\"OUT OF BOUNDS! Please try again: \")\n",
+    "        continue\n",
+    "    \n",
+    "    elif number - guess > 10:\n",
+    "        print(\"\")\n",
+    "    \n",
+    "    break"
    ]
   },
   {
@@ -152,8 +201,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "98590ff4fe04c8543246b2a01debd3de3c5ca9b666f43f1fa87d5110c692004c"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
