--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from random import randint\n",
-    "number = randint(1,100)"
+    "import random\n",
+    "num = random.randint(1,100)"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -132,19 +132,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OUT OF BOUNDS! Please try again: \n"
+      "OUT OF BOUNDS. Please try again: \n"
      ]
     }
    ],
    "source": [
     "while True:\n",
-    "    \n",
-    "    guess = int(input(\"I'm thinking of a number between 1 and 100!\\n What's your guess?: \"))\n",
-    "    \n",
-    "    if guess < 1 or guess > 100:\n",
-    "        print(\"OUT OF BOUNDS! Please try again: \")\n",
+    "    guess = int(input('My secret number is between 1 and 100.\\n Your guess is: '))\n",
+    "    if guess > 100 or guess < 1:\n",
+    "        print('OUT OF BOUNDS. Please try again: ')\n",
     "        continue\n",
-    "    \n",
     "    break"
    ]
   },
@@ -162,25 +159,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COLD!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "COLDER!\n",
+      "COLDER!\n",
+      "COLDER!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "WARMER!\n",
+      "COLDER!\n",
+      "COLDER!\n",
+      "WARMER!\n",
+      "COLDER!\n",
+      "Congratulations! You won!! You got it right after only 17 tries!\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
-    "\n",
-    "    # we can copy the code from above to take an input\n",
-    "    guess = int(input(\"I'm thinking of a number between 1 and 100!\\n What's your guess?: \"))\n",
     "    \n",
-    "    if guess < 1 or guess > 100:\n",
-    "        print(\"OUT OF BOUNDS! Please try again: \")\n",
+    "    guess = int(input('My secret number is between 1 and 100.\\n Your guess is: '))\n",
+    "    \n",
+    "    if guess > 100 or guess < 1:\n",
+    "        print('OUT OF BOUNDS. Please try again: ')\n",
     "        continue\n",
     "    \n",
-    "    elif number - guess > 10:\n",
-    "        print(\"\")\n",
-    "    \n",
-    "    break"
+    "    if guess == num:\n",
+    "        print(f'Congratulations! You won!! You got it right after only {len(guesses)} tries!')\n",
+    "        break\n",
+    "\n",
+    "    guesses.append(guess)\n",
+    "\n",
+    "    if guesses[-2]:\n",
+    "        if abs(num-guess) < abs(num-guesses[-2]):\n",
+    "            print('WARMER!')\n",
+    "        else:\n",
+    "            print('COLDER!')\n",
+    "\n",
+    "    else:\n",
+    "        if abs(num-guess) <= 10:\n",
+    "            print('WARM!')\n",
+    "        else:\n",
+    "            print('COLD!')"
    ]
   },
   {
